--- a/ClubeDoLivro/ClubeDoLivro.csproj
+++ b/ClubeDoLivro/ClubeDoLivro.csproj
@@ -6,4 +6,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MudBlazor" Version="7.15.0" />
+  </ItemGroup>
+
 </Project>
